@@ -115,14 +115,24 @@ MediaPlayerPrivateGStreamerBase::MediaPlayerPrivateGStreamerBase(MediaPlayer* pl
     , m_texture(0)
 #endif
 {
-    g_mutex_init(&m_bufferMutex);
+#if GLIB_CHECK_VERSION(2, 31, 0)
+    m_bufferMutex = WTF::fastNew<GMutex>();
+    g_mutex_init(m_bufferMutex);
+#else
+    m_bufferMutex = g_mutex_new();
+#endif
 }
 
 MediaPlayerPrivateGStreamerBase::~MediaPlayerPrivateGStreamerBase()
 {
     g_signal_handler_disconnect(m_webkitVideoSink.get(), m_repaintHandler);
 
-    g_mutex_clear(&m_bufferMutex);
+#if GLIB_CHECK_VERSION(2, 31, 0)
+    g_mutex_clear(m_bufferMutex);
+    WTF::fastDelete(m_bufferMutex);
+#else
+    g_mutex_free(m_bufferMutex);
+#endif
 
     if (m_buffer)
         gst_buffer_unref(m_buffer);
@@ -168,9 +178,9 @@ IntSize MediaPlayerPrivateGStreamerBase::naturalSize() const
      */
     GRefPtr<GstCaps> caps = webkitGstGetPadCaps(m_videoSinkPad.get());
 #else
-    g_mutex_lock(&m_bufferMutex);
+    g_mutex_lock(m_bufferMutex);
     GRefPtr<GstCaps> caps = m_buffer ? GST_BUFFER_CAPS(m_buffer) : 0;
-    g_mutex_unlock(&m_bufferMutex);
+    g_mutex_unlock(m_bufferMutex);
 #endif
     if (!caps)
         return IntSize();
@@ -358,9 +368,9 @@ void MediaPlayerPrivateGStreamerBase::triggerRepaint(GstBuffer* buffer)
     else
 #endif
     {
-        g_mutex_lock(&m_bufferMutex);
+        g_mutex_lock(m_bufferMutex);
         gst_buffer_replace(&m_buffer, buffer);
-        g_mutex_unlock(&m_bufferMutex);
+        g_mutex_unlock(m_bufferMutex);
         m_player->repaint();
     }
 }
@@ -383,9 +393,9 @@ void MediaPlayerPrivateGStreamerBase::paint(GraphicsContext* context, const IntR
     if (!m_player->visible())
         return;
 
-    g_mutex_lock(&m_bufferMutex);
+    g_mutex_lock(m_bufferMutex);
     if (!m_buffer) {
-        g_mutex_unlock(&m_bufferMutex);
+        g_mutex_unlock(m_bufferMutex);
         return;
     }
 
@@ -399,19 +409,19 @@ void MediaPlayerPrivateGStreamerBase::paint(GraphicsContext* context, const IntR
     GRefPtr<GstCaps> caps = GST_BUFFER_CAPS(m_buffer);
 #endif
     if (!caps) {
-        g_mutex_unlock(&m_bufferMutex);
+        g_mutex_unlock(m_bufferMutex);
         return;
     }
 
     RefPtr<ImageGStreamer> gstImage = ImageGStreamer::createImage(m_buffer, caps.get());
     if (!gstImage) {
-        g_mutex_unlock(&m_bufferMutex);
+        g_mutex_unlock(m_bufferMutex);
         return;
     }
 
     context->drawImage(reinterpret_cast<Image*>(gstImage->image().get()), ColorSpaceSRGB,
         rect, gstImage->rect(), CompositeCopy, DoNotRespectImageOrientation, false);
-    g_mutex_unlock(&m_bufferMutex);
+    g_mutex_unlock(m_bufferMutex);
 }
 
 #if USE(ACCELERATED_COMPOSITING) && USE(TEXTURE_MAPPER_GL) && !USE(COORDINATED_GRAPHICS)
