@@ -1,3 +1,15 @@
+2013-06-05  Philippe Normand  <pnormand@igalia.com>
+
+        Unreviewed, GStreamer 0.10 build fix after r151175.
+
+        * platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp:
+        (WebCore::MediaPlayerPrivateGStreamerBase::MediaPlayerPrivateGStreamerBase):
+        (WebCore::MediaPlayerPrivateGStreamerBase::~MediaPlayerPrivateGStreamerBase):
+        (WebCore::MediaPlayerPrivateGStreamerBase::naturalSize):
+        (WebCore::MediaPlayerPrivateGStreamerBase::triggerRepaint):
+        (WebCore::MediaPlayerPrivateGStreamerBase::paint):
+        * platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.h:
+
 2013-06-05  Mihnea Ovidenie  <mihnea@adobe.com>
 
         [CSS Regions] REGRESSION Incorrect layer clipping inside flow thread
